// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolInputContainerFc should render correctly 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__container"></div>
</div>
`;

exports[`KolInputContainerFc should render with both startAdornment and endAdornment 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__adornment kol-input-container__adornment--start">
    <kol-icon _icons="codicon codicon-start-icon" _label=""></kol-icon>
  </div>
  <div class="kol-input-container__container"></div>
  <div class="kol-input-container__adornment kol-input-container__adornment--end">
    <kol-icon _icons="codicon codicon-end-icon" _label=""></kol-icon>
  </div>
</div>
`;

exports[`KolInputContainerFc should render with children 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__container">
    <input type="text">
  </div>
</div>
`;

exports[`KolInputContainerFc should render with endAdornment 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
  <div class="kol-input-container__container"></div>
  <div class="kol-input-container__adornment kol-input-container__adornment--end">
    <kol-icon _icons="codicon codicon-end-icon" _label=""></kol-icon>
  </div>
</div>
`;

exports[`KolInputContainerFc should render with startAdornment 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__adornment kol-input-container__adornment--start">
    <kol-icon _icons="codicon codicon-start-icon" _label=""></kol-icon>
  </div>
  <div class="kol-input-container__container"></div>
  <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
</div>
`;
